// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`images in figures render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <figure
          class="ltx_figure"
          id="fig1"
        >
          <span
            class="ltx_ERROR undefined"
          >
            \\includegraphics
          </span>
          

          <p
            class="ltx_p"
          >
            [width=8cm]fig.png
          </p>
          

          <figcaption
            class="ltx_caption"
          >
            <span
              class="ltx_tag ltx_tag_figure"
            >
              Figure 
              <span
                class="ltx_ERROR undefined"
              >
                \\thefigure
              </span>
              : 
            </span>
            Fig.
          </figcaption>
          

        </figure>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            See fig 
            <span
              class="ltx_ref ltx_ref_self"
            >
              id1
            </span>
            .
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p2"
        >
          

          <p
            class="ltx_p"
          >
            Ref which doesn’t exist 
            <span
              class="ltx_ref ltx_missing_label ltx_ref_self"
            >
              LABEL:fig:notexist
            </span>
            .
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`multiple images in figures render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <figure
          class="ltx_figure"
          id="fig1"
        >
          <span
            class="ltx_ERROR undefined"
          >
            \\includegraphics
          </span>
          

          <p
            class="ltx_p"
          >
            [width=8cm]fig.png

            <span
              class="ltx_ERROR undefined"
            >
              \\includegraphics
            </span>
            [width=8cm]fig2.png
          </p>
          

          <figcaption
            class="ltx_caption"
          >
            <span
              class="ltx_tag ltx_tag_figure"
            >
              Figure 
              <span
                class="ltx_ERROR undefined"
              >
                \\thefigure
              </span>
              : 
            </span>
            Fig.
          </figcaption>
          

        </figure>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            See fig 
            <span
              class="ltx_ref ltx_ref_self"
            >
              id1
            </span>
            .
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`plain images render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        <span
          class="ltx_ERROR undefined"
        >
          \\includegraphics
        </span>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            []fig.png
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
